Interface Segregation Principle/src/edu/najah/eng/solid/is/example/good/conversion/StringConversion.java
package edu.najah.eng.solid.is.example.good.conversion;

public interface StringConversion {
    public String convertToString();
}
