Interface Segregation Principle/src/edu/najah/eng/solid/is/example/bad/intf/Conversion.java
package edu.najah.eng.solid.is.example.bad.intf;

public interface Conversion {

    public double intToDouble();
    public char intToChar();
    public String charToString();

}
